new filter status criteria design